<resources>
    <string name="app_name">Greenr</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="tb_title">Greenr</string>
    <string name="tb_subtitle">Gardening tools made simple</string>
    <string name="item_1">My Calendar</string>
    <string name="item_2">Settings</string>

    <string name="fragment_title">Make a note for today</string>
    <string name="log_notes">Notes about today</string>
    <string name="log_hint">Record anything noteworthy about today\'s gardening here.</string>
    <string name="button_cancel">cancel</string>
    <string name="button_save">save</string>
    <string name="title_activity_plant_search">plant_search</string>
    <string name="button_calendar">My Calendar</string>
    <string name="button_garden">My Garden</string>
    <string name="button_reminder">Reminders</string>
    <string name="spin_plant">Choose a plant: </string>
    <string name="spin_reminder">Reminder type: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="achievement_unlocked">Achievement unlocked!</string>
</resources>
