<?xml version="1.0" encoding="utf-8"?>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManageReminder"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/task_type_icon"
            android:src="@drawable/tasks_48"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type of task: "
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="task name placeholder"
            android:id="@+id/name_placeholder"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rWatering">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_watering"
            android:src="@drawable/watering_can_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Watering"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rPruning">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_pruning"
            android:src="@drawable/pruning_shears_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pruning"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rWeeding">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_weeding"
            android:src="@drawable/watering_can_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weeding"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rPlanting">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_planting"
            android:src="@drawable/pruning_shears_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Planting"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rTrans">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_transplant"
            android:src="@drawable/question_32"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Create your own reminder"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/task_type_icon"
            android:src="@drawable/tasks_48"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type of task: "
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="task name placeholder"
            android:id="@+id/name_placeholder"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rWatering">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_watering"
            android:src="@drawable/watering_can_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Watering"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rPruning">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_pruning"
            android:src="@drawable/pruning_shears_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pruning"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rWeeding">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_weeding"
            android:src="@drawable/watering_can_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weeding"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rPlanting">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_planting"
            android:src="@drawable/pruning_shears_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Planting"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:id="@+id/rTrans">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/task_transplant"
            android:src="@drawable/question_32"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Create your own reminder"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ManageReminder"
    android:focusableInTouchMode="false"
    android:background="#fffff6"
    android:padding="8dp">

    <include layout="@layout/toolbar"
        android:id="@+id/main_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. Reminder type "
                android:id="@+id/tv_remind_type"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="#009989"
                android:layout_weight="0.8"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:id="@+id/ivRemindType"
                android:src="@drawable/question_64"
                android:layout_weight="0.2"/>

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinRemindType"
            android:prompt="@string/spin_reminder"
            android:layout_marginRight="36dp"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Choose a plant"
                android:id="@+id/tv_garden_plants"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="#009989"
                android:layout_weight="0.8"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:src="@drawable/question_64"
                android:id="@+id/ivPlant"
                android:layout_weight="0.2"/>

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinPlant"
            android:prompt="@string/spin_plant"
            android:layout_marginRight="36dp"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3. Frequency"
            android:id="@+id/tvFrequency"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="#009989"
            android:layout_weight="0.8"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:src="@drawable/question_64"
            android:id="@+id/ivFrequency"
            android:layout_weight="0.2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every"
            android:layout_weight="0.3"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_freq"
            android:text="3"
            android:hint="3"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionDone"
            android:layout_weight="0.2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_days"
            android:text="days"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/button_cancel"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/button_save"
            android:layout_weight="0.5"/>

    </LinearLayout>

</LinearLayout>